syntax = "proto3";

package SampleReport;

import "policy/v1beta1/type.proto";
import "mixer/adapter/model/v1beta1/extensions.proto";

option (istio.mixer.adapter.model.v1beta1.template_variety) = TEMPLATE_VARIETY_REPORT;

message Template {
    istio.policy.v1beta1.Value value = 1;
    map<string, istio.policy.v1beta1.Value> dimensions = 2;
}
